--- a/css/game.css
+++ b/css/game.css
@@ -4430,3 +4430,23 @@ body {
   font-family: 'Candal', sans-serif;
   color: white;
 }
+
+#sound {
+  position: fixed;
+  right: 20px;
+  top: 10px;
+
+  width: 50px;
+  height: 50px;
+
+  background: url("../images/sound_toggle.png");
+  cursor: pointer;
+}
+
+#sound.on {
+  background-position: 0 -50px;
+}
+
+#sound.off {
+  background-position: 0 0;
+}
